tests/rascal/negative/type_errors/L1/20_expression_ES10_D4_26.ob
MODULE Test20;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               y := ((+ ((1223 * x) MOD (z * 1223))) MOD (((1 - z) * (1223 * 0)) DIV ((+ 0) * (0 * 1223))));
               p := ((+ ((1223 DIV 1) + (+ 200))) = (((z - z) - (- 200)) MOD ((1 * z) + (0 DIV 1))));
               r := (~ ((~ (200 = 1223)) OR ((x DIV z) # (x MOD 2))));
               x := ((((200 + x) - (y + z)) MOD (+ (+ 1))) - ((- (1223 - y)) * ((1 + 200) + (2 DIV 1))));
               r := ((+ ((x * 200) + (- x))) < ((- (- 1223)) MOD ((1 + x) MOD (- 2))));
               q := ((((200 * y) + (200 + y)) > ((0 MOD x) MOD (1223 DIV 1))) & (((q & q) & (p & q)) & ((z DIV 1223) <= (2 MOD 2))));
               p := ((((- 2) - (+ x)) * ((1 + 2) - (200 * y))) # ((+ (1223 + 0)) * ((1223 MOD 2) + (- 1))));
               z := (- (((200 DIV y) DIV (x + 1223)) MOD ((x * x) - (z + 200))));
               q := ((((200 - 2) - (0 - 0)) + ((z DIV 200) + (x DIV 0))) < (((x - 1223) DIV (+ 1223)) - (+ (x + y))));
  (* error *)  x := ((((q MOD 0) * (- 1)) - (- (2 - y))) * (((y * 1) * (2 + 0)) DIV ((+ 1) + (z DIV 0))))
END Test20.